# Chatprogram

./: CMakeLists.txt  ChatMessage.h  WinSockInitializer.h  main.cpp
Client/: ChatSession.cpp  ChatSession.h  ConnectionManager.cpp  ConnectionManager.h
Server/: ChatServer.cpp  ChatServer.h  Client.h  ClientConnection.cpp  ClientConnection.h  CommandDispatcher.cpp  CommandDispatcher.h
